--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La chouette agence, le web design à Lyon: soyez attractifs, visibles sur internet! </title>
 
     
 <!-- Analytics -->
