--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+						<h2>La chouette agence est une agence de web design qui aide
+							les entreprises à devenir attractives et visibles sur Internet.</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -147,8 +148,11 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web"
-							src="img/citation.png" />
+						<p class="client-text">"La chouette agence est une excellente agence web ! Les
+							web designers ont réussi à capturer l'essence de notre
+							entreprise et à l'intégrer à notre site. Cela nous a aidé à
+							doubler nos ventes en ligne à Lyon.</p>
+						<p id="client">Maxime Guibard. PDG de À vos fourchettes</p>
 
 					</div>
 				</div>
@@ -192,7 +196,8 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						<p class="slogan">Nous travaillons avec beaucoup de clients,
+							voici nos réalisations.</p>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
@@ -270,85 +275,86 @@
 			</div>
 		</section>
 		<!-- bloc-5-cta END -->
-	</main>
-	<!-- Footer - bloc-8 -->
-	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-		<div class="container bloc-sm">
-			<div class="row">
-				<div class="col-sm-12">
-					<p class="text-center white">
-						La chouette agence - Agence web basée à Lyon.<br>
-					</p>
-					<div class="row row-no-gutters social">
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+
+		<!-- Footer - bloc-8 -->
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+			<div class="container bloc-sm">
+				<div class="row">
+					<div class="col-sm-12">
+						<p class="text-center white">
+							La chouette agence - Agence web basée à Lyon.<br>
+						</p>
+						<div class="row row-no-gutters social">
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+								</div>
 							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+								</div>
 							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+								</div>
 							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html"><span
+											class="fa fa-instagram icon-md"></span></a>
+								</div>
 							</div>
+							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
+								illustrations, design de site web, site web, web, internet, site internet, site</div>
 						</div>
-						<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-							illustrations, design de site web, site web, web, internet, site internet, site</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-4">
-							Partenaires
-							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-							</ul>
-						</div>
-						<div class="col-sm-4">
-							Annuaires liste 1
-							<ul>
-								<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-								<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-								<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-								<li><a href="123seoture.com">123seo.com</a></li>
-								<li><a href="123site.com">123site.com</a></li>
-								<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-								<li><a href="listeagence.com">listeagence.com</a></li>
-								<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-								<li><a href="listeseo.com">listeseo.com</a></li>
-							</ul>
-						</div>
-						<div class="col-sm-4">
-							Annuaires liste 2
-							<ul>
-								<li><a href="betterseo.com">betterseo.com</a></li>
-								<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-								<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-								<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-								<li><a href="liensagogo.com">liensagogo.com</a></li>
-								<li><a href="backlink.com">backlink.com</a></li>
-								<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-								<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-								<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-							</ul>
+						<div class="row">
+							<div class="col-sm-4">
+								Partenaires
+								<ul>
+									<li><a href="voiture.com">voiture.com</a></li>
+									<li><a href="pizza.com">pizza.com</a></li>
+									<li><a href="matoiture.com">matoiture.com</a></li>
+									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								</ul>
+							</div>
+							<div class="col-sm-4">
+								Annuaires liste 1
+								<ul>
+									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
+									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
+									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
+									<li><a href="123seoture.com">123seo.com</a></li>
+									<li><a href="123site.com">123site.com</a></li>
+									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
+									<li><a href="listeagence.com">listeagence.com</a></li>
+									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+									<li><a href="listeseo.com">listeseo.com</a></li>
+								</ul>
+							</div>
+							<div class="col-sm-4">
+								Annuaires liste 2
+								<ul>
+									<li><a href="betterseo.com">betterseo.com</a></li>
+									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
+									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
+									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
+									<li><a href="liensagogo.com">liensagogo.com</a></li>
+									<li><a href="backlink.com">backlink.com</a></li>
+									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
+									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
+									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
-	<!-- Footer - bloc-8 END -->
+		</footer>
+		<!-- Footer - bloc-8 END -->
 
-
+	</main>
 	<!-- Principal conteneur END -->
 
 
