Replace bmp to jpg

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
 							alt="La chouette agence, agence web paris, création logo paris" />
 						<h1 class="text-center hero-bloc-text tc-white ">
-							La chouette agence.
+							La chouette agence
 						</h1>
 						<div class="text-center">
 							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
@@ -152,7 +152,7 @@
 							web designers ont réussi à capturer l'essence de notre
 							entreprise et à l'intégrer à notre site. Cela nous a aidé à
 							doubler nos ventes en ligne à Lyon.</p>
-						<p id="client">Maxime Guibard. PDG de À vos fourchettes</p>
+						<p class="client">Maxime Guibard. PDG de À vos fourchettes</p>
 
 					</div>
 				</div>
@@ -174,15 +174,15 @@
 							.<br>
 						</h3>
 						<p class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles
 							aient
 							besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez
 							besoin
 							d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous
 							contacter.
-							Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront
+							Nous travaillerons ensemble pour créer des sites beaux et bien structurés, qui seront
 							facilement
-							trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
+							trouvables sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
 								href="page2.html">Contactez notre équipe</a><br>
 						</p>
 					</div>
@@ -205,7 +205,7 @@
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/1.jpg"
-								alt="paris web design logo agence web meilleure agence et refonte site web journal"
+								alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h4 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -218,7 +218,7 @@
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -229,10 +229,10 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3modif.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								src="img/3modif.jpg" class="img-responsive portfolio-thumb"
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 						<h4 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h4>
@@ -242,10 +242,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4modif.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								src="img/4modif.jpg" class="img-responsive portfolio-thumb"
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 						<h4 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h4>
