--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="">
+	<meta name="description" content="Nous sommes une agence de web design qui vous aide à créer un site de A à Z ou lui donne un coup de jeune. Pour des sites beaux et bien structurés, facilement trouvables sur les moteurs de recherche">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
