--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.avif" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
+								src="img/1.avif"
 								alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h4 class="mg-md text-center">
@@ -208,9 +208,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.avif" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.jpg" class="img-responsive portfolio-thumb"
+								src="img/2.avif" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
@@ -222,9 +222,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3modif.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.avif" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3modif.jpg" class="img-responsive portfolio-thumb"
+								src="img/3.avif" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 						<h4 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -235,9 +235,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4modif.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.avif" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4modif.jpg" class="img-responsive portfolio-thumb"
+								src="img/4.avif" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 						<h4 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
