--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<li>
 								</li>
 								<li>
-									<a href="Contact.html">page2 &gt;</a>
+									<a href="Contact.html">Contact &gt;</a>
 								</li>
 							</ul>
 						</div>
@@ -203,9 +203,9 @@
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.webp" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
-						<h3 class="mg-md text-center">
+						<h4 class="mg-md text-center">
 							Création d'un site web pour photographes
-						</h3>
+						</h4>
 						<p class="text-center">
 							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 						</p>
