--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 					</nav>
 				</div>
 			</div>
+		</div>
 	</header>
 	<!-- bloc-0 END -->
 
@@ -293,6 +294,7 @@
 						</div>
 					</div>
 				</div>
+			</div>
 		</footer>
 		<!-- Footer - bloc-8 END -->
 
